# battery-tool

./: .clang-tidy  .clangd  .gitignore  Brewfile  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  meson.build  native-macos.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
c/: build_iokit.py  meson.build  power_sources.c  power_sources.h  smc.c  smc.h  smc_wrapper.c  smc_wrapper.h
c/tests/: meson.build  test_power_sources.c  test_smc_wrapper.c
smc-command/: smc
src/: main.py
src/batterytool/: battery.py  constants.py  iokit_wrapper.pyi  logging.py  loop.py  main.py
tests/: conftest.py  test.py  test_main.py
