[project]
name = "batterytool"
version = "0.1.2"
authors = [
    { name = "Orest Tokovenko", email = "hi@oresttokovenko.com"}
]
requires-python = ">=3.12, <3.13"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
]

[project.scripts]
batterytool = "batterytool.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.data-files]
"smc-command" = ["smc-command/smc"]

[tool.setuptools.packages.find]
where = ["src"]
